--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,7 @@ DONE Add app name at root
 
 DONE Handle ':' in graphviz
 
-Support multiple routes for one endpoint
+***Support multiple routes for one endpoint
 
 DONE sorta Fix routing when parent is more than 1 level up
   This means we don't favour length IF a shorter path matches string wise
@@ -12,7 +12,7 @@ DONE sorta Fix routing when parent is more than 1 level up
   Compromised by using a heuristic matchyness. Exact string match beats a longer placeholder string
   This will probably do strange things in complicated cases
 
-Better matching of placeholder strings
+***Better matching of placeholder strings
 
 DONE Perhaps a config file to do heuristics and placeholder matches
 
@@ -22,8 +22,11 @@ DONE Style according to return (page vs data)
 
 DONE Add Get/Post embelishments
 
-In route objects: add '+' operator to append to path etc
+***In route objects: add '+' operator to append to path etc
 
 DONE Break into files
 
-Add configure options for output
+***Add configure options for output
+
+***Add legend rather than embedded comment in graph
+
